syntax = "proto3";
package brokerageApi;
option go_package = "github.com/mrNobody95/Gate/services/brokerage/api";
import "api/src/models.proto";
import "services/brokerage/api/src/market.proto";
import "services/brokerage/api/src/resolution.proto";

service CandleService {
  rpc OHLC(OhlcRequest) returns (api.Candles);
}

message OhlcRequest {
  // @inject_tag: json:"resolution"
  Resolution Resolution = 1;
  // @inject_tag: json:"market"
  Market Market = 2;
  // @inject_tag: json:"from"
  int64 From = 3;
  // @inject_tag: json:"to"
  int64 To = 4;
}